--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>My app</title>
-    <meta charset="UTF-8" />
-    <base href="/">
-  </head>
-  <body>
-    <app-root>Loading...</app-root>
-  </body>
-</html>
+<!-- <my-app>loading</my-app> -->
+<app-root></app-root>
